# aios-core

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
.aios-core/: index.esm.js  (+7 more)
knowledge-etl/: pyproject.toml
knowledge-etl/data/: migration_report.md
knowledge-etl/data/checkpoints/thinking-in-systems/: assess.json  l2.json  l3.json
knowledge-etl/data/people/brad-frost/: gaps.yaml  metadata.yaml
knowledge-etl/data/people/cagan-patton/: gaps.yaml  metadata.yaml
knowledge-etl/data/people/jeff-patton/: gaps.yaml  metadata.yaml
knowledge-etl/data/people/joao-lozano/: gaps.yaml  metadata.yaml
knowledge-etl/data/people/kent-beck/: gaps.yaml  metadata.yaml
knowledge-etl/data/people/marty-cagan/: gaps.yaml  metadata.yaml
knowledge-etl/data/people/pedro-valerio/: gaps.yaml  metadata.yaml
knowledge-etl/data/people/thiago-finch/: gaps.yaml  metadata.yaml  readiness.yaml
knowledge-etl/scripts/: migrate_production_minds.py
knowledge-etl/src/knowledge_etl/: __main__.py  cli.py  config.py
knowledge-etl/src/knowledge_etl/extract/: marker_extract.py  metadata.py
knowledge-etl/tests/: conftest.py  test_22_1_checkpoint_cache.py  test_22_2_structured_output.py  test_22_3_rate_limit_retry.py  test_22_4_haiku_map_two_pass_reduce.py  test_epic12_completeness.py  test_gap_detector.py  test_l3_authorial.py  test_l3_place.py  test_l3_place_pkb.py  test_person_metadata.py  test_person_readiness.py  test_profile_aggregator.py
(+844 files in other folders)
